actualizacion data base para banner